CHANGES.txt - 2006-04-07
------------------------

CHANGES IN CUPS V1.2

	- The "fitplot" option did not work with output from
	  Mozilla (STR #1542)
	- The imagetops filter did not work with Level 2 or 3
	  printers (STR #1533)
	- The scheduler now recognizes PostScript files with PJL
	  commands that do not include an ENTER LANGUAGE command.
	- Added --with-printcap configure option.
	- 64-bit SSL fixes for MacOS X.
	- The scheduler didn't send some printer state change
	  events.
	- The scheduler didn't send jobs to busy remote printers.
	- Fixed some problems with the launchd support.
	- Added new USB printer backend for MacOS X.
	- The PostScript filter now handles files that start with
	  an incomplete PJL header (PR #6076)
	- The web interface language selection code did not try
	  the generic language localization (STR #1531)
	- The language cache, string pool, and transcoding caches
	  are now process global instead of per-thread to avoid
	  problems with GNOME and to allow for data sharing
	  between threads (STR #1530)
	- Fixed a CUPS 1.1.x compatibility bug (STR #1528)
	- The web interface redirection after certain printer
	  administration tasks was broken (STR #1516)
	- Web interface authorization could get stuck (STR #1512)
	- Localization updates (STR #1513, STR #1518, STR #1520)
	- The pstops filter didn't work with some files (STR
	  #1523)
	- "./configure --enable-static" didn't work (STR #1522)
	- The scheduler was not using the configured default
	  Group (STR #1521)
	- The web interface still did not show the localized time
	  and date for some locales and systems (STR #1509)
	- httpAddrGetList() would crash on systems without
	  getaddrinfo().
	- Socket URIs without a trailing slash would cause the
	  port number to not be accepted (STR #1519)
	- Local raw and System V printers were not advertised as
	  such for printer browsing (STR #1502)
	- The RPM spec file incorrectly put duplicate copies of